--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-theme-docz": "^1.2.0",
     "gatsby-transformer-sharp": "^2.1.21",
     "ol": "^5.3.3",
+    "proj4": "^2.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
